Change bg and fix scroll on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    filter: blur(30px);
+    filter: blur(3px);
     z-index: -1;
   }
 }
